name:                ethereum-analyzer
version:             0.1.0.0
synopsis:            A Ethereum contact analyzer.
homepage:            https://github.com/ethereumK/ethereum-analyzer
license:             Apache-2.0
license-file:        LICENSE
author:              Kevin Chen
maintainer:          k_@berkeley.edu
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4 && < 5,
                       aeson,
                       blockapps-data,
                       blockapps-util,
                       bytestring,
                       conduit-combinators,
                       conduit-extra,
                       ethereum-vm,
                       exceptions,
                       hflags,
                       hexstring,
                       hoopl,
                       http-conduit,
                       json-rpc,
                       monad-logger,
                       mtl,
                       network,
                       text,
                       vector
  exposed-modules:
                  Blockchain.Analyze,
                  Blockchain.Analyze.IR,
                  Blockchain.Jsonrpc.Client,
                  Executable.EthAnalyzer
  -- other-modules:
  --              Blockchain.Analyze.Internal
                                  
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  buildable:           True
  default-language:    Haskell98

executable ethereum-analyzer
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4 && < 5,
                       blockapps-util,
                       ethereum-analyzer,
                       ethereum-vm,
                       hflags,
                       monad-logger
                       
  ghc-options:         -Wall -O2                       
  hs-source-dirs:      exec_src
  buildable:           True
  default-language:    Haskell98

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blockapps-util
                     , bytestring
                     , ethereum-analyzer
                     , ethereum-vm
                     , extra
                     , hspec
