name:                ethereum-analyzer
version:             0.1.0.0
synopsis:            A Ethereum contact analyzer.
homepage:            https://github.com/ethereumK/ethereum-analyzer
license:             Apache-2.0
license-file:        LICENSE
author:              Kevin Chen
maintainer:          k_@berkeley.edu
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4 && < 5,
                       aeson,
                       bimap,
                       blockapps-data,
                       blockapps-util,
                       bytestring,
                       conduit-combinators,
                       conduit-extra,
                       containers,
                       ethereum-vm,
                       exceptions,
                       extra,
                       fgl,
                       graphviz,
                       hexstring,
                       hflags,
                       hoopl >= 3.10.2.1,
                       http-conduit,
                       http-media,
                       http-types,
                       json-rpc,
                       logging-effect,
                       monad-logger,
                       mtl,
                       neat-interpolation,
                       network,
                       optparse-applicative,
                       prometheus-client,
                       prometheus-metrics-ghc,
                       protolude,
                       servant,
                       servant-server,
                       text,
                       time,
                       unordered-containers,
                       vector,
                       wai,
                       wai-extra,
                       wai-middleware-prometheus,
                       warp,
                       wl-pprint-text
                       
  exposed-modules:     Blockchain.Analyze
                     , Blockchain.Analyze.Common
                     , Blockchain.Analyze.CfgAugmentPass
                     , Blockchain.Analyze.CfgAugWithTopNPass
                     , Blockchain.Analyze.Decompile
                     , Blockchain.Analyze.Servant
                     , Blockchain.Analyze.Util
                     , Blockchain.Jsonrpc.Client
  other-modules:       Blockchain.Analyze.IR
                     , Blockchain.Analyze.Servant.API
                     , Blockchain.Analyze.Servant.API.Internal
                     , Blockchain.Analyze.Servant.Server
                     , Blockchain.Analyze.Servant.Server.Handlers
                     , Blockchain.Analyze.Servant.Server.Instrument
                     , Blockchain.Analyze.Servant.Server.Logging
                                  
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  buildable:           True
  default-language:    Haskell98
  default-extensions:  OverloadedStrings
  
executable ethereum-analyzer
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       blockapps-util,
                       ethereum-analyzer,
                       ethereum-vm,
                       hflags,
                       monad-logger
                       
  ghc-options:         -Wall -O2                       
  hs-source-dirs:      exec_src
  buildable:           True
  default-language:    Haskell98

executable ea-dump-contract
  main-is:             DumpCodeMain.hs
  build-depends:       base >= 4 && < 5
                     , blockapps-util
                     , ethereum-analyzer
                     , ethereum-vm
                     , hflags
                     , monad-logger
                     , text
                       
  ghc-options:         -Wall -O2                       
  hs-source-dirs:      exec_src
  buildable:           True
  default-language:    Haskell98

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Blockchain.Analyze.CfgAugmentPassSpec
                     , Blockchain.Analyze.CfgAugWithTopNPassSpec
                     , Blockchain.Analyze.IRSpec
                     , Blockchain.Analyze.UtilSpec
                     , Blockchain.AnalyzeSpec
                     , SpecCommon
  build-depends:       base
                     , blockapps-util
                     , bytestring
                     , ethereum-analyzer
                     , ethereum-vm
                     , extra
                     , hoopl
                     , hspec
                     , text
  default-language:    Haskell98
