
name:                blockapps-util
version:             0.1.0.0
license-file:        LICENSE
author:              jamshid
maintainer:          j
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0

library
  exposed-modules:   Blockchain.Colors
                   , Blockchain.ExtWord
                     -- , Blockchain.Error
                   , Blockchain.Format
                     -- , Blockchain.MiscJSON
                   , Blockchain.Output
                     -- , Blockchain.SHA
                   , Blockchain.Util
                   , Legacy.Haskoin.V0102.Network.Haskoin.Crypto.BigWord
  other-modules:     Legacy.Haskoin.V0102.Network.Haskoin.Crypto.Curve
                     -- , Legacy.Haskoin.V0102.Network.Haskoin.Constants
                     
                     -- , Legacy.Haskoin.V0102.Network.Haskoin.Crypto.ECDSA
                     -- , Legacy.Haskoin.V0102.Network.Haskoin.Crypto.Hash
                     -- , Legacy.Haskoin.V0102.Network.Haskoin.Crypto.Keys
                      , Legacy.Haskoin.V0102.Network.Haskoin.Crypto.NumberTheory
                     -- , Legacy.Haskoin.V0102.Network.Haskoin.Crypto.Point
                      , Legacy.Haskoin.V0102.Network.Haskoin.Util
  build-depends:       base
                     , byteable
                     , aeson
                     , base16-bytestring
                     , binary
                     , bytestring
                     , cryptohash
                     , deepseq
                     , ethereum-rlp
                     , fast-logger
                     , filepath
                     , global-lock
                     , http-api-data
                     , monad-logger
                     , mtl
                     , nibblestring
                     , path-pieces
                     , split
                     , stm
                     , text
                     , unix
  hs-source-dirs:      src
  default-language:    Haskell2010
