name:                ethereum-analyzer-webui
version:             0.0.2
synopsis:            A web frontend for ethereum-analyzer
homepage:            https://github.com/ethereumK/ethereum-analyzer
license:             Apache-2.0
license-file:        LICENSE
author:              Kevin Chen
maintainer:          k_@berkeley.edu
category:            Web, Ethereum, Static Analysis
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
description:         A web frontend for ethereum-analyzer.

source-repository head
  type:     git
  location: https://github.com/zchn/ethereum-analyzer
  branch:   master
  subdir:   ethereum-analyzer-webui
        
source-repository this
  type:     git
  location: https://github.com/zchn/ethereum-analyzer
  tag:      v0.0.2
  subdir:   ethereum-analyzer-webui

library
  build-depends:       base >= 4 && < 5,
                       aeson,
                       bimap,
                       bytestring,
                       conduit-combinators,
                       conduit-extra,
                       containers,
                       ethereum-analyzer-deps,
                       exceptions,
                       extra,
                       fgl,
                       graphviz,
                       hexstring,
                       hflags,
                       hoopl >= 3.10.2.1,
                       http-conduit,
                       http-media,
                       http-types,
                       json-rpc,
                       logging-effect,
                       monad-logger,
                       mtl,
                       neat-interpolation,
                       network,
                       optparse-applicative,
                       prometheus-client,
                       prometheus-metrics-ghc,
                       protolude,
                       servant,
                       servant-server,
                       text,
                       time,
                       unordered-containers,
                       vector,
                       wai,
                       wai-extra,
                       wai-middleware-prometheus,
                       warp,
                       wl-pprint-text
                       
  exposed-modules:     Ethereum.Analyzer.Servant.API
                     , Ethereum.Analyzer.Servant.API.Internal
                     , Ethereum.Analyzer.Servant.Server
                     , Ethereum.Analyzer.Servant.Server.Handlers
                     , Ethereum.Analyzer.Servant.Server.Instrument
                     , Ethereum.Analyzer.Servant.Server.Logging
                                  
  ghc-options:         -Wall
  hs-source-dirs:      src
  buildable:           True
  default-language:    Haskell98
  default-extensions:  OverloadedStrings
  
executable ethereum-analyzer-webui
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       ethereum-analyzer,
                       ethereum-analyzer-deps,
                       hflags,
                       monad-logger
                       
  ghc-options:         -Wall
  hs-source-dirs:      exec_src
  buildable:           True
  default-language:    Haskell98
