name:                ethereum-analyzer
version:             0.0.1
synopsis:            A Ethereum contract analyzer.
homepage:            https://github.com/ethereumK/ethereum-analyzer
license:             Apache-2.0
license-file:        LICENSE
author:              Kevin Chen
maintainer:          k_@berkeley.edu
category:            Ethereum, Static Analysis
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
description:         A Ethereum contract analyzer.

source-repository this
  type:     git
  location: https://github.com/zchn/ethereum-analyzer
  branch:   master
  tag:      v0.0.1

library
  build-depends:       base >= 4 && < 5,
                       aeson,
                       bimap,
                       bytestring,
                       conduit-combinators,
                       conduit-extra,
                       containers,
                       ethereum-analyzer-deps,
                       exceptions,
                       extra,
                       fgl,
                       graphviz,
                       hexstring,
                       hflags,
                       hoopl >= 3.10.2.1,
                       http-conduit,
                       http-media,
                       http-types,
                       json-rpc,
                       logging-effect,
                       monad-logger,
                       mtl,
                       neat-interpolation,
                       network,
                       optparse-applicative,
                       prometheus-client,
                       prometheus-metrics-ghc,
                       protolude,
                       servant,
                       servant-server,
                       text,
                       time,
                       unordered-containers,
                       vector,
                       wai,
                       wai-extra,
                       wai-middleware-prometheus,
                       warp,
                       wl-pprint-text
                       
  exposed-modules:     Ethereum.Analyzer
                     , Ethereum.Analyzer.Common
                     , Ethereum.Analyzer.CfgAugmentPass
                     , Ethereum.Analyzer.CfgAugWithTopNPass
                     , Ethereum.Analyzer.Decompile
                     , Ethereum.Analyzer.Servant
                     , Ethereum.Analyzer.Util
                     , Blockchain.Jsonrpc.Client
  other-modules:       Ethereum.Analyzer.IR
                     , Ethereum.Analyzer.Servant.API
                     , Ethereum.Analyzer.Servant.API.Internal
                     , Ethereum.Analyzer.Servant.Server
                     , Ethereum.Analyzer.Servant.Server.Handlers
                     , Ethereum.Analyzer.Servant.Server.Instrument
                     , Ethereum.Analyzer.Servant.Server.Logging
                                  
  ghc-options:         -Wall
  hs-source-dirs:      src
  buildable:           True
  default-language:    Haskell98
  default-extensions:  OverloadedStrings
  
executable ethereum-analyzer
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       ethereum-analyzer,
                       ethereum-analyzer-deps,
                       hflags,
                       monad-logger
                       
  ghc-options:         -Wall
  hs-source-dirs:      exec_src
  buildable:           True
  default-language:    Haskell98

executable ea-dump-contract
  main-is:             DumpCodeMain.hs
  build-depends:       base >= 4 && < 5
                     , directory
                     , ethereum-analyzer
                     , ethereum-analyzer-deps
                     , hflags
                     , monad-logger
                     , mtl
                     , text
  ghc-options:         -Wall
  hs-source-dirs:      exec_src
  buildable:           True
  default-language:    Haskell98

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Ethereum.Analyzer.CfgAugmentPassSpec
                     , Ethereum.Analyzer.CfgAugWithTopNPassSpec
                     , Ethereum.Analyzer.IRSpec
                     , Ethereum.Analyzer.UtilSpec
                     , Ethereum.AnalyzerSpec
                     , SpecCommon
  build-depends:       base
                     , bytestring
                     , ethereum-analyzer
                     , ethereum-analyzer-deps
                     , extra
                     , hoopl
                     , hspec
                     , text
  default-language:    Haskell98
